--- a/desktop.html
+++ b/desktop.html
@@ -126,7 +126,7 @@
 				<br>
 
 				<hr id="settingshr">
-				<a id="darktext">Bits Tech - 2022</a>
+				<a id="darktext">broimluna - 2022</a>
 				<br>
                 <p>Based on 'Windows' Template from <a target="blank" style="color: rgb(99, 99, 105);" href="https://html5-templates.com">html5-templates.com</a></p>
 				<p>Current theme: <a id="darktext" class="currenttheme"></a></p>
