--- a/desktop.html
+++ b/desktop.html
@@ -93,7 +93,7 @@
 				<h1 id="settingsh1">Themes</h1>
 				<div id="themesrow">
 						<button id="settingsbutton" onclick="switch_style('default');return false;" name="Default Theme" value="Default Theme">Default</button>
-						<button id="settingsbutton" onclick="switch_style('lighttheme');return false;" name="Light Theme" value="Light Theme">Light Mode</button>
+						<button id="settingsbutton" onclick="switch_style('lighttheme');return false;" name="Light Theme" value="Light Theme">Light</button>
 						<button id="settingsbutton" onclick="switch_style('theme1');return false;" name="Theme 1" value="Theme 1">Classic</button>
 						<button id="settingsbutton" onclick="switch_style('theme2');return false;" name="Theme 2" value="Theme 2">Metro</button>
 						
@@ -139,6 +139,7 @@
 		
 		<div id="taskbar">
             <a id="apps" onclick="appstoggle();"><img border="0" alt="" src="system/images/sys_logo.png" width="52" height="32"></a>
+			
 			<div id="timecontainer">
 				<a><div id="time" class="time"></div></a>
 				</div>
