--- a/desktop.html
+++ b/desktop.html
@@ -14,6 +14,7 @@
 	<link rel="alternate stylesheet 3" type="text/css" title="darktheme" href="system/css/themes/defaultdark.css">
 	<link rel="alternate stylesheet 4" type="text/css" title="macos" href="system/css/themes/dock.css">
 	<link rel="alternate stylesheet 5" type="text/css" title="modern" href="system/css/themes/modern.css">
+	<audio src="system/sounds/startup.wav" autoplay></audio>
 
 
 
