--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 		</div>
 		
 		<div id="icons">
-		Should be working on Technical Usability Preview 3/4.
+		  <center>
+			<a class="openWindow" data-id="0"><img border="0" alt="" src="system/img/icons/paint-32x32.png" width="32" height="32"><br>Paint</a>  
+			<a class="openWindow" data-id="1"><img border="0" alt="" src="system/img/icons/notepad-32x32.png" width="32" height="32"><br>Notepad</a>
+			<a class="openWindow" data-id="3"><img border="0" alt="" src="system/img/icons/cal-32x32.png" width="32" height="32"><br>Calendar</a>
+			<a class="openWindow" data-id="5"><img border="0" alt="" src="system/img/icons/bronze-32x32.png" width="32" height="32"><br>Bronze<br>Browser</a>
+		  </center>      
 		</div>
 		
 		
@@ -95,7 +100,7 @@
 
 	</div>
 	
-	<a id="watermark">AvalancheOS<br>Technical Usability Preview 2<br>Build 1111</a>
+	<a id="watermark">AvalancheOS<br>Technical Usability Preview 3<br>Build 1195</a>
 
 </body>
 
