--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="colorop" lang="en">
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -9,11 +9,15 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="system/js/script.js"></script>	
 	<link rel="stylesheet" type="text/css" href="system/css/style.css" />
+	<link rel="alternate stylesheet 1" type="text/css" title="theme1" href="system/css/themes/classic.css">
+	<link rel="alternate stylesheet 2" type="text/css" title="theme2" href="system/css/themes/modern.css">
+	<link rel="alternate stylesheet 3" type="text/css" title="theme3" href="system/css/themes/metro.css">
 	<title>AvalancheOS</title>
+	<audio id="startupsnd" src="system/snd/startup.wav" hidden></audio>
 </head>
 <body onload="startTime()">
 
-	<div id="desktop">
+	<desktop id="desktop">
 		
 		<div class="window closed" data-html="true" icon="<img src='system/img/icons/paint-32x32.png' width='25' height='25'>" data-title="Paint">
 			<iframe width="100%" height="100%" src="apps/jspaint/index.html"></iframe>
@@ -43,9 +47,74 @@
 				<a target="hos" href="apps/hyperos/index.html">Home</a>
 				<iframe name="hos" width="100%" height="100%" src="apps/hyperos/index.html"></iframe>
 			</div>
+			<div class="window closed" data-html="true" icon="<img src='system/img/icons/settings-32x32.png' width='25' height='25'>" data-title="Control Panel">
+				<div id="tabsettings">
+					<button id="settingsbutton" onclick="openTab('Customization')">Customization</button>
+					<button id="settingsbutton" onclick="openTab('About')">About</button>
+				</div>
+					<hr id="settingshr">
+		
+			<div id="Customization" class="tab">
+				<h1 id="settingsh1">Themes</h1>
+				<div id="themesrow">
+					<button id="settingsbutton" onclick="switch_style('default');return false;" name="Default Theme" value="Default Theme">Default</button>
+					<button id="settingsbutton" onclick="switch_style('theme1');return false;" name="Theme 1" value="Theme 1">Classic</button>
+					<button id="settingsbutton" onclick="switch_style('theme2');return false;" name="Theme 2" value="Theme 2">Modern</button>
+					<button id="settingsbutton" onclick="switch_style('theme3');return false;" name="Theme 3" value="Theme 3">Metro</button>
+				</div>
+					<hr id="settingshr">
+					<h1 id="settingsh1">Background</h1>
+					<input id="inputbtn" type="file" accept="image/*" onchange="changeBG(event)" style="margin: 2px 0px;">
+					<br>
+					<br>
+					<button id="settingsbutton" onclick="resetBG(event)">Reset to default</button><br>
+					<br>
+					<hr id="settingshr">
+					<h1 id="settingsh1">Colors</h1>
+					<input type="color" id="colorpicker"><a>Choose your color</a></input>
+					<br>
+					<br>
+					<button id="defaultColor" onclick="defaultColors()">Set colors to default</button>
+					<hr id="settingshr">
+					<h1 id="settingsh1">Other</h1>
+					<input type="checkbox" id="waterCheck" onclick="enableWatermark()"><a>Enable the watermark</a></input>
+					<br>
+					<input type="checkbox" id="startCheck" onclick="startEnable()"><a id="startCheckText">Always show apps button</a></input>
+					<br id="startCheckBR">
+					<input type="checkbox" id="colorCheck" onclick="invertColors()"><a>Enable inverted colors</a></input>
+					<br>
+					<input type="checkbox" id="localbgCheck" onclick="localBG()"><a>Enable local wallpaper</a></input>
+				</div>
+
+				<div id="About" class="tab" style="display:none;text-align: center;overflow: hidden;">
+		
+					<div id="abranding">
+					<img src="system/img/sys_logo.png" height="55" width="105"></img>
+					<a>AvalancheOS</a>
+					</div>
+		
+					<hr id="settingshr">
+					<br>
+					<a>Version 3 (Build: 2600.101)</a>
+					<br>
+					<br>
+		
+					<hr id="settingshr">
+					<a>broimluna - 2022</a>
+					<br>
+					<p>Based on 'Windows' Template from <a target="blank" id="htmltemp" href="https://html5-templates.com">html5-templates.com</a></p>
+				</div>
+		
+				<div class="bottomBtns">
+					<a class="btmbtninvert" target="_blank" href="https://github.com/broimluna"><img src="system/img/icons/github.png" height="32" width="32" title="Follow my GitHub!"></a>
+				  </div>
+			</div>
+
+			
+			
 		
 		<div id="taskbar">
-			<button class="appsPanel" onclick="appstoggle()"><img src='system/img/sys_logo.png' width='44' height='28'></button>
+			<a class="appsPanel" onclick="appstoggle()"><img src='system/img/sys_logo.png' width='44' height='28'></a>
 			<a id="time"></a>
 		</div>
 		
@@ -60,7 +129,7 @@
 		
 		
 		<div id="appsmenu">
-			<h1 class="appsHtxt">Apps</h1>
+			<h1 id="appsHtxt">Apps</h1>
 				<div id="appicons">
 					<center>
 						<a class="openWindow" data-id="0"><img border="0" alt="" src="system/img/icons/paint-32x32.png" width="32" height="32"><br>Paint</a>
@@ -70,17 +139,18 @@
 						<a class="openWindow" data-id="4"><img border="0" alt="" src="system/img/icons/calc-32x32.png" width="32" height="32"><br>Calculator</a>
 						<a class="openWindow" data-id="5"><img border="0" alt="" src="system/img/icons/bronze-32x32.png" width="32" height="32"><br>Bronze Browser</a>
 						<a class="openWindow" data-id="6"><img border="0" alt="" src="system/img/icons/hyperos-32x32.png" width="32" height="32"><br>HyperOS</a>
+						<a class="openWindow" data-id="7"><img border="0" alt="" src="system/img/icons/settings-32x32.png" width="32" height="32"><br>Control Panel</a>
+
+
 						
 					</center>
 				</div>
-				<div class="bottomBtns">
-					<a target="_blank" href='https://discord.gg/HpHWuanm4C'><img src="system/img/icons/discord.png" height="32" width="32" title="Join the Discord!"></a>
-					<a class="btmbtninvert" target="_blank" href='https://github.com/broimluna'><img src="system/img/icons/github.png" height="32" width="32" title="Follow my GitHub!"></a>
-				  </div>
+			
 		</div>
 
 		<div id="contextMenu" class="context-menu" style="display: none; left: 140px; top: 421px;">
 			<ul>
+				<li class="openWindow" data-id="7">Open Control Panel</li>
 				<li onclick="window.location.reload(true);">Reload AvalancheOS</li>
 				<li onclick="activatefull(document.documentElement);">Activate Fullscreen</li>
 				<li onclick="deactivatefull();">Deactivate Fullscreen</li>
@@ -88,6 +158,8 @@
 
 			</ul>
 			</div>
+
+			  
 
 			<div id="startup">
 				<div class="startuplogo">
@@ -100,8 +172,21 @@
 
 	</div>
 	
-	<a id="watermark">AvalancheOS<br>Technical Usability Preview 3<br>Build 1195</a>
+	<a id="watermark">AvalancheOS 3<br>Build 2600</a>
 
 </body>
+<script>
+	$('#colorpicker').on('change', function() {
+    var newbgcolor = this.value;
+	const winhead = document.getElementsByClassName('windowHeader');
+    $(winhead).css('background', newbgcolor);
+	$('#taskbar').css('background', newbgcolor);
+	$('#appsmenu').css('background', newbgcolor);
+	$('#htmltemp').css('color', newbgcolor);
+	$('#watermark').css('color', newbgcolor);
+	$('#abranding a').css('color', newbgcolor);
+	$('button').css('border-color', newbgcolor);
 
+});
+</script>
 </html>
