--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="system/js/script.js"></script>	
 	<link rel="stylesheet" type="text/css" href="system/css/style.css" />
+	<link rel="stylesheet" href="system/css/themes/metro.css" media="only screen and (max-width: 1023px)">
 	<link rel="alternate stylesheet 1" type="text/css" title="theme1" href="system/css/themes/classic.css">
-	<link rel="alternate stylesheet 2" type="text/css" title="theme2" href="system/css/themes/modern.css">
-	<link rel="alternate stylesheet 3" type="text/css" title="theme3" href="system/css/themes/metro.css">
+	<link rel="alternate stylesheet 2" type="text/css" title="theme2" href="system/css/themes/metro.css">
+	<link rel="alternate stylesheet 3" type="text/css" title="theme3" href="system/css/themes/modern.css">
 	<title>AvalancheOS</title>
 	<audio id="startupsnd" src="system/snd/startup.wav" hidden></audio>
 </head>
-<body onload="startTime()">
+
+<body onload="startupFunctions()">
 
 	<desktop id="desktop">
 		
@@ -59,8 +61,8 @@
 				<div id="themesrow">
 					<button id="settingsbutton" onclick="switch_style('default');return false;" name="Default Theme" value="Default Theme">Default</button>
 					<button id="settingsbutton" onclick="switch_style('theme1');return false;" name="Theme 1" value="Theme 1">Classic</button>
-					<button id="settingsbutton" onclick="switch_style('theme2');return false;" name="Theme 2" value="Theme 2">Modern</button>
-					<button id="settingsbutton" onclick="switch_style('theme3');return false;" name="Theme 3" value="Theme 3">Metro</button>
+					<button id="settingsbutton" onclick="switch_style('theme2');return false;" name="Theme 2" value="Theme 2">Metro</button>
+					<button id="settingsbutton" onclick="switch_style('theme3');return false;" name="Theme 3" value="Theme 3">Modern</button>
 				</div>
 					<hr id="settingshr">
 					<h1 id="settingsh1">Background</h1>
