--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						<br>
 						<select style="display: none !important" name="and_or" size='0'></select><br>
 						</form>
-						<a id="button" href="index.html">Reset flags</a>
+						<a id="button" class="rstflgs" href="index.html">Reset flags</a>
 					</div>
 				<div id="About" class="tab" style="display:none;text-align: center;overflow: hidden;">
 		
@@ -181,7 +181,7 @@
 					</div>
 		
 					<hr id="settingshr">
-					<a>November 2022 Release (Build: 8000.1)</a>
+					<a>November 2022 Release (Build: 8000.100)</a>
 					<br>		
 					<hr id="settingshr">
 					<a>broimluna - 2022</a>
@@ -299,7 +299,7 @@ function setColour() {
 
   $('.windowHeader, #appsmenu, #taskbar').css('background', "hsl(" + hsl1 + ", 100%, " + hsl2 + "%)");
   $('#htmltemp, #watermark, #abranding a, .checkBox').css('color', "hsl(" + hsl1 + ", 100%, " + hsl2 + "%)");
-  $('#button, button, .calcbutton, .calctext, .textinput').css('border-color', "hsl(" + hsl1 + ", 100%, " + hsl2 + "%)");
+  $('#button, button, .calcbutton, .calctext, .textinput, .rstflgs').css('border-color', "hsl(" + hsl1 + ", 100%, " + hsl2 + "%)");
   $("#colouredSlider .ui-state-default").css("background-color", "hsl(" + hsl1 + ", 100%, 50%)");
   $("#bwSlider .ui-state-default").css("background-color", "rgb(" + hsl2 * 2.5 + "," + hsl2 * 2.5 + "," + hsl2 * 2.5 + ")");
 }
